@@ -630,6 +630,15 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXUS iP3600  (EXPERIMENTAL)(*2)
        Canon PIXMA iP3680  (EXPERIMENTAL)(*2)
 
+       Canon iP4100 series (EXPERIMENTAL)(*1)
+       Canon PIXUS iP4100R (EXPERIMENTAL)(*2)
+
+       Canon iP4200 series (EXPERIMENTAL)(*1)
+       Canon PIXUS iP4200 (EXPERIMENTAL)(*2)
+
+       Canon iP4300 series (EXPERIMENTAL)(*1)
+       Canon PIXUS iP4300 (EXPERIMENTAL)(*2)
+
        Canon iP4500 series (EXPERIMENTAL)(*1)
        Canon PIXUS iP4500  (EXPERIMENTAL)(*2)
 
